Fixing Scrollbar

--- a/Vs.VoorzieningenEnRegelingen.Site/wwwroot/css/blazor.css
+++ b/Vs.VoorzieningenEnRegelingen.Site/wwwroot/css/blazor.css
@@ -3,6 +3,7 @@
 html, body {
     font-family: 'Exo 2', sans-serif;
     height: 100%;
+    margin-top: 10px;
 }
 
 .splash {
